# tailscale-manager

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md  exampleconfig.json  flake.nix  tailscale-manager.cabal
.github/workflows/: docker-build.yml  nix-github-actions.yml
app/: Main.hs
nix/: nixos-module.nix  vm-test.nix
src/: TailscaleManager.hs
src/TailscaleManager/: Config.hs  Logging.hs
src/TailscaleManager/Discovery/: AWSManagedPrefixList.hs  DNS.hs
test/: Main.hs
