cabal-version:      3.0
name:               tailscale-manager
-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
-- A short (one-line) description of the package.
-- synopsis:
-- A longer description of the package.
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Benjamin Staffin
maintainer:         benley@gmail.com
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

common deps
    default-language: Haskell2010
    build-depends:
        base ^>=4.18.2.1
      , aeson ^>= 2.1.2
      , aeson-iproute ^>= 0.3.0
      , bytestring ^>= 0.11.5
      , containers ^>= 0.6.7
      , hslogger ^>= 1.3.1
      , network ^>= 3.1.4
      , iproute ^>= 1.7.12
      , monad-loops ^>= 0.4.3
      , optparse-applicative ^>= 0.18.1
      , prettyprinter ^>= 1.7.1
      , process ^>= 1.6.19
      , protolude ^>= 0.3.4
      , raw-strings-qq ^>= 1.1

executable tailscale-manager
    import:           warnings, deps
    main-is:          Main.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: tailscale-manager
    hs-source-dirs:   app

library
    import:          warnings, deps
    exposed-modules: TailscaleManager
    hs-source-dirs:  src

test-suite tailscale-manager-tests
    import: warnings, deps
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    build-depends:
        tailscale-manager
      , HUnit ^>= 1.6.2
      , HUnit-approx ^>= 1.1
      , tasty ^>= 1.4.3
      , tasty-ant-xml ^>= 1.1.9
      , tasty-hunit ^>= 0.10.2
